--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -1,4 +1,5 @@
 .results-page {
+    margin-bottom: 50px;
 
     .filter-section {
         flex-basis: 85%;
@@ -353,7 +354,7 @@
     left: 0;
     right: 0;
     width: 100%;
-    z-index: 5;
+    z-index: 1050;
 }
 
 
