- Fixed the background color of dropdown and for options

--- a/resources/sass/components/basic/select.scss
+++ b/resources/sass/components/basic/select.scss
@@ -52,5 +52,8 @@
     .dropdown-toggle,
     .results-page-select {
         max-width: 158px;
+        option {
+            background-color: $white !important;
+        }
     }
 }
