--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -46,7 +46,7 @@ $borderVideo: #707070;
 $borderGrey: #d7d7d7;
 
 // Body
-$body-bg: #f8fafc;
+$body-bg: #fff;
 $body-color: $darkerGrey;
 
 // Full width
