--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -42,7 +42,8 @@
 @import 'components/healthChoice';
 @import 'components/logo';
 @import 'components/pagination';
-@import 'components/compare';
+@import 'components/solutions';
+//@import 'components/compare';
 @import 'components/form';
 @import 'components/accordion';
 
