fix NHS/Private label bug

--- a/resources/sass/_mixins.scss
+++ b/resources/sass/_mixins.scss
@@ -257,6 +257,7 @@
         padding-top: ($height / $width) * 100%;
     }
     >.content {
+        width: 100%;
         @include v-h-c;
     }
 }
