--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -298,7 +298,7 @@
         //line-height: 19.2px;
     }
 
-    .NHSHospital, .privateHospital {
+    .nhs-hospital, .private-hospital {
         position: absolute;
         top: 0;
         width: 60px;
@@ -306,7 +306,7 @@
         transform: rotate(180deg);
     }
 
-    .NHSHospital {
+    .nhs-hospital {
 
         border-bottom: solid 30px $darkBlue;
         border-right: solid 30px $darkBlue;
@@ -315,15 +315,15 @@
 
     }
 
-    .privateHospital {
+    .private-hospital {
         border-bottom: solid 30px $hotpink;
         border-right: solid 30px $hotpink;
         border-left: solid 30px transparent;
         border-top: solid 30px transparent;
     }
 
-    .NHSHospital,
-    .privateHospital {
+    .nhs-hospital,
+    .private-hospital {
         text-align: center;
 
         p {
