--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -298,7 +298,8 @@
         //line-height: 19.2px;
     }
 
-    .nhs-hospital, .private-hospital {
+    .nhs-hospital,
+    .private-hospital {
         position: absolute;
         top: 0;
         width: 60px;
