--- a/resources/sass/components/_solutions.scss
+++ b/resources/sass/components/_solutions.scss
@@ -135,6 +135,10 @@
 .special-offer-tab {
     color: $white;
     background-image: linear-gradient(246deg, #8e00fe 0%, #77a9f5 100%);
+
+    &.pink {
+        background-image: linear-gradient(252deg, #d57ca6 0%, #ed0373 100%);
+    }
     //width: 300px;
     border-radius: 10px 10px 0 0;
     font-size: 18px;
@@ -143,7 +147,7 @@
 
     .special-offer-header {
         position: relative;
-        padding: 20px 50px 0 20px;
+        padding: 0 50px 0 20px;
         height: 80px;
 
         .offer-text {
@@ -203,6 +207,6 @@
 }
 
 .special-offer-body {
-    padding: 0 25px 25px 117px;
+    padding: 0 25px 25px 100px;
     display: none;
 }
