--- a/resources/sass/components/_solutions.scss
+++ b/resources/sass/components/_solutions.scss
@@ -170,17 +170,14 @@
                 width: 10px;
                 height: 10px;
                 border-width: 10px;
-
-                p {
-
-                }
             }
         }
 
-        svg {
+        svg,
+        span {
             position: absolute;
             right: 20px;
-            top: 20px;
+            top: 30px;
             width: 20px;
             height: 20px;
             line-height: 60px;
