- removed `container` class for the solutions bar - readded the margin of the doctor

--- a/resources/sass/components/_solutions.scss
+++ b/resources/sass/components/_solutions.scss
@@ -15,7 +15,7 @@
 
         // Doctor illustration
         .doctor {
-            //margin-left: 100px;
+            margin-left: 100px;
             cursor: pointer;
         }
 
