- Fixed the Video of the Homepage - Fixed the `How does it work` container

--- a/resources/sass/pages/_homePage.scss
+++ b/resources/sass/pages/_homePage.scss
@@ -45,7 +45,7 @@
                     overflow: hidden;
 
                     video {
-                        width: 140%;
+                        width: 140% !important;
                     }
 
                     .player-button {
