--- a/resources/sass/components/_solutions.scss
+++ b/resources/sass/components/_solutions.scss
@@ -135,6 +135,7 @@
 .special-offer-tab {
     color: $white;
     background-image: linear-gradient(246deg, #8e00fe 0%, #77a9f5 100%);
+    width: 340px;
 
     &.pink {
         background-image: linear-gradient(252deg, #d57ca6 0%, #ed0373 100%);
@@ -152,9 +153,16 @@
         cursor: pointer;
 
         .offer-text {
-            min-width: 250px;
-            font-size: 16px;
+            //min-width: 250px;
             line-height: 1;
+
+            .offer-title {
+                font-size: 18px;
+            }
+
+            .offer-subtitle {
+                font-size: 14px;
+            }
         }
 
         .open-text {
@@ -162,11 +170,12 @@
         }
 
         .image-wrapper {
-            width: 55px;
-            height: 50px;
-            @include aspect-ratio(67px, 62px);
+            width: 48px;
+            height: 44px;
+            @include aspect-ratio(48px, 44px);
 
             .label {
+                display: none;
                 width: 10px;
                 height: 10px;
                 border-width: 10px;
