Fix bug with SVG inside bootstrap select

--- a/resources/sass/components/basic/select.scss
+++ b/resources/sass/components/basic/select.scss
@@ -46,6 +46,11 @@
             border: 2px solid $darkestWhite;
         }
     }
+
+    + svg,
+    + span {
+        pointer-events: none;
+    }
 }
 
 .results-page {
