Move the 'click for waiting times' under 'click for prices

--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -255,7 +255,7 @@
         line-height: 20px;
         text-align: center;
 
-        small {
+        span {
             font-size: 10px;
             line-height: 1;
         }
