Hide additional info box

--- a/resources/sass/components/_form.scss
+++ b/resources/sass/components/_form.scss
@@ -185,6 +185,10 @@ select::-ms-expand {
     }
 }
 
+#additional_information {
+    display: none;
+}
+
 textarea {
     width: 100%;
     border-radius: 10px;
