Fix bug on homepage select picker

--- a/resources/sass/components/basic/_select.scss
+++ b/resources/sass/components/basic/_select.scss
@@ -37,7 +37,7 @@
         // Button added by BS select
         .dropdown-toggle {
             height: 61px;
-            line-height: 61px;
+            //line-height: 61px;
             padding: 0 45px 0 16px;
             width: 100%;
             border-radius: 10px;
