--- a/resources/sass/components/_form.scss
+++ b/resources/sass/components/_form.scss
@@ -140,6 +140,10 @@ select::-ms-expand {
     }
 }
 
+.dropdown-toggle {
+    cursor: auto !important;
+}
+
 .checkbox {
     input[type="checkbox"] {
         position: absolute;
