Fix margin issue on 'additional information'

--- a/resources/sass/components/_form.scss
+++ b/resources/sass/components/_form.scss
@@ -200,10 +200,12 @@ select::-ms-expand {
     max-height: 0;
     overflow: hidden;
     transition: $transition;
+    margin-bottom: 0 !important;
 
     &.open {
         //height: auto;
         max-height: 500px;
+        margin-bottom: inherit !important;
     }
 }
 
