add container to solutions bar header

--- a/resources/sass/components/_solutions.scss
+++ b/resources/sass/components/_solutions.scss
@@ -8,14 +8,14 @@
 
     .compare-hospitals-header {
         position: relative;
-        width: 100%;
-        margin: 0 auto;
-        padding: 0 20px;
+        //width: 100%;
+        //margin: 0 auto;
+        //padding: 0 20px;
         height: 50px;
 
         // Doctor illustration
         .doctor {
-            margin-left: 100px;
+            //margin-left: 100px;
             cursor: pointer;
         }
 
@@ -87,7 +87,6 @@
         .container {
             position: relative;
             width: 100%;
-            max-width: 1220px;
             margin: 0 auto;
             padding: 0 20px;
         }
