add svg package

--- a/resources/sass/components/_solutions.scss
+++ b/resources/sass/components/_solutions.scss
@@ -50,8 +50,14 @@
             }
         }
 
+
         .compare-button-title {
             cursor: pointer;
+
+            svg {
+                width: 30px;
+                height: 30px;
+            }
 
             p {
                 margin: 0;
