--- a/resources/sass/components/_solutions.scss
+++ b/resources/sass/components/_solutions.scss
@@ -69,7 +69,15 @@
             svg {
                 width: 30px;
                 height: 30px;
-                margin-right: 10px;
+                opacity: 0.3;
+                max-width: 0;
+                transition: $transition;
+
+                &.has-count {
+                    opacity: 1;
+                    max-width: initial;
+                    margin-right: 10px;
+                }
             }
 
             p {
