--- a/resources/sass/pages/_homePage.scss
+++ b/resources/sass/pages/_homePage.scss
@@ -137,9 +137,10 @@
             margin-bottom: 25px;
             height: 120px;
 
-            img {
+            svg {
                 height: 100%;
                 width: auto;
+                fill: $teal;
             }
         }
 
