--- a/resources/sass/layout/_footer.scss
+++ b/resources/sass/layout/_footer.scss
@@ -27,11 +27,7 @@
 
 .footer-middle {
     background-color: #1b1b1b;
-    background-image: url('../images/Layer_7_copy_2.svg');
-    background-repeat: no-repeat;
-    background-position: top;
-    background-size: contain;
-    padding: 200px 0 50px;
+    padding: 50px 0;
 }
 
 .footer-lower {
