--- a/resources/sass/components/basic/_button.scss
+++ b/resources/sass/components/basic/_button.scss
@@ -7,14 +7,15 @@
     color: $white;
     font-size: 24px;
     padding: 14px 26px;
-    background-size: 200%;
-    background-position: -5px;
+    background-size: 300% 100%;
+    background-position: left;
     position: relative;
     @include transition(0.3s);
     cursor: pointer;
 
     &:hover {
         color: $white;
+        background-position: right;
     }
 
     svg, i {
@@ -65,10 +66,6 @@
 
     &.btn-mg-top {
         margin-top: 20px;
-    }
-
-    &.btn-grad {
-        background-position: left;
     }
 
     //colours
@@ -173,8 +170,6 @@
         background: #ed0373;
         background: linear-gradient(-90deg, #ed0373, #fc278d, #fc278d, #649ef7, #649ef7, #1b70f3, #1b70f3);
         transition: 0.6s;
-        background-size: 300%;
-        background-position: left;
         padding: 0 25px;
     }
 
@@ -191,7 +186,7 @@
             background: #649ef7;
             background: linear-gradient(-90deg, #649ef7, #1b70f3, #1b70f3, #1b70f3);
             background-size: 200%;
-            background-position: right;
+            //background-position: right;
             border-radius: 100px;
             height: 50px;
             line-height: 50px;
@@ -508,14 +503,6 @@
             }
         }
     }
-
-
-    //gradient button
-    &.btn-grad {
-        &:hover {
-            background-position: right !important;
-        }
-    }
 }
 
 // Container for buttons
@@ -525,7 +512,7 @@
 
 .btn-submit-results {
     font-size: 18px;
-
+    background-size: 300% 100%;
     letter-spacing: -0.9px;
     line-height: 20px;
     background-image: linear-gradient(270deg, #00cecd 0%, #00d7b5 56%, #00df9d 100%);
