'How to use' vertical alignment

--- a/resources/sass/pages/_homePage.scss
+++ b/resources/sass/pages/_homePage.scss
@@ -144,12 +144,10 @@
             }
         }
 
-        .numeral {
-            position: absolute;
-            top: 0;
-            left: 22%;
-            font-size: 1.2em;
-            font-weight: 600;
+        ul {
+            li {
+
+            }
         }
     }
 
