Tooltips added to 'how it works section'

--- a/resources/sass/pages/_homePage.scss
+++ b/resources/sass/pages/_homePage.scss
@@ -82,7 +82,7 @@
 
     //============================HOW SECTION=============================
     .how-section__parent {
-        margin: 45px auto;
+        padding: 45px 0 90px;
 
         .section-title {
             font-size: 40px;
