--- a/resources/sass/components/basic/_button.scss
+++ b/resources/sass/components/basic/_button.scss
@@ -7,7 +7,7 @@
     color: $white;
     font-size: 24px;
     padding: 14px 26px;
-    background-size: 300% 100%;
+    background-size: 300% 100% !important;
     background-position: left;
     position: relative;
     @include transition(0.3s);
@@ -15,7 +15,7 @@
 
     &:hover {
         color: $white;
-        background-position: right;
+        background-position: right !important;
     }
 
     svg, i {
@@ -114,21 +114,26 @@
         width: 32px;
         border-radius: 23px;
         border: 2px solid #00cecd;
-        background-image: url('../images/icons/heart.svg');
-        background-position: center center;
-        background-repeat: no-repeat;
-        background-size: 50%;
         flex: 0 0 32px;
         padding: 0;
 
-        &.selected {
-            background-image: url('../images/icons/heart-selected.svg');
-            background-color: #00cecd;
-        }
 
         &:after {
+            content: '';
+            position: absolute;
+            @include v-h-c;
             width: 32px;
             height: 32px;
+            border-radius: 50%;
+            background-image: url('../images/icons/heart.svg');
+            background-position: center center;
+            background-repeat: no-repeat;
+            background-size: 50% !important;
+        }
+
+        &.selected:after {
+            background-image: url('../images/icons/heart-selected.svg');
+            background-color: #00cecd;
         }
     }
 
@@ -299,7 +304,6 @@
 
         &.btn-enquire {
             border-radius: 10px;
-            background: $blue;
             color: $white;
             font-size: 12px;
             letter-spacing: -0.7px;
@@ -321,12 +325,6 @@
                 top: 0;
                 width: 40px;
                 height: 40px;
-            }
-
-            &:hover {
-                color: $white;
-                text-decoration: none;
-                background-color: darken($blue, 5%);
             }
         }
 
@@ -411,7 +409,6 @@
             color: $white;
             height: 40px;
             line-height: 13px;
-            background-color: $pink;
             min-width: 160px;
 
             &:before {
