--- a/resources/sass/pages/_homePage.scss
+++ b/resources/sass/pages/_homePage.scss
@@ -144,23 +144,25 @@
             }
         }
 
-        ol {
-            //padding: 0 0 0 50px;
-            margin: 30px 0 50px 0;
-            counter-reset: counter;
+        .icon-description {
+            > ul {
+                //padding: 0 0 0 50px;
+                margin: 30px 0 50px 0;
+                counter-reset: counter;
 
-            li {
-                margin: 0 0 22px 0;
-                position: relative;
-                counter-increment: counter;
+                > li {
+                    margin: 0 0 22px 0;
+                    position: relative;
+                    counter-increment: counter;
 
-                &:before {
-                    content: counter(counter) '.';
-                    position: absolute;
-                    top: 0;
-                    right: calc(100% + 10px);
-                    color: $blue;
-                    @extend .font-semibold;
+                    &:before {
+                        content: counter(counter) '.';
+                        position: absolute;
+                        top: 0;
+                        right: calc(100% + 10px);
+                        color: $blue;
+                        @extend .font-semibold;
+                    }
                 }
             }
         }
