Add extra checkboxes to private enquiry form.

--- a/resources/sass/components/basic/_button.scss
+++ b/resources/sass/components/basic/_button.scss
@@ -303,7 +303,7 @@
 
         &.btn-enquire {
             border-radius: 10px;
-            color: $white;
+            color: $white !important;
             font-size: 12px;
             letter-spacing: -0.7px;
             line-height: 13px;
