Add blue bullet points to 'how does it work'

--- a/resources/sass/pages/_homePage.scss
+++ b/resources/sass/pages/_homePage.scss
@@ -163,6 +163,12 @@
                         color: $blue;
                         @extend .font-semibold;
                     }
+
+                    ul {
+                        li {
+
+                        }
+                    }
                 }
             }
         }
