--- a/resources/sass/layout/_footer.scss
+++ b/resources/sass/layout/_footer.scss
@@ -18,6 +18,7 @@
 
         li {
             margin-bottom: 15px;
+
             a {
                 font-size: 22px;
             }
@@ -31,17 +32,20 @@
 
     .svg-wrap {
         margin: 0 -20px;
-    }
 
-    svg {
-        path {
-            stroke-dasharray: 10000;
-            stroke-dashoffset: 10000;
-            animation: drawsvg 10s ease-in-out;
-            //animation-delay: 1s;
-            animation-fill-mode: forwards;
+        &.draw {
+            svg {
+                path {
+                    stroke-dasharray: 10000;
+                    stroke-dashoffset: 10000;
+                    animation: drawsvg 8s ease-in;
+                    //animation-delay: 1s;
+                    animation-fill-mode: forwards;
+                }
+            }
         }
     }
+
 }
 
 .footer-lower {
