--- a/resources/sass/components/_solutions.scss
+++ b/resources/sass/components/_solutions.scss
@@ -59,14 +59,14 @@
             svg {
                 width: 30px;
                 height: 30px;
-                opacity: 0.3;
-                max-width: 0;
+                opacity: 0;
+                //max-width: 0;
+                margin-right: 10px;
                 transition: $transition;
 
                 &.has-count {
                     opacity: 1;
-                    max-width: initial;
-                    margin-right: 10px;
+                    //max-width: initial;
                 }
             }
 
@@ -74,6 +74,12 @@
                 margin: 0;
                 color: $white;
             }
+        }
+
+        #compare_number {
+            display: inline-block;
+            min-width: 10px;
+            text-align: center;
         }
 
         .compare-arrow {
