--- a/resources/sass/_animations.scss
+++ b/resources/sass/_animations.scss
@@ -17,6 +17,29 @@
     }
 }
 
+@keyframes center-beat {
+    0% {
+        transform: scale(1);
+    }
+    48% {
+        transform: scale(1.17,1.08);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+@keyframes outer-beat1 {
+    0% {
+        transform: scale(.9);
+    }
+    48% {
+        transform: scale(1.08,1.03);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
 .popover-open {
     animation-name: bg-reverse;
     animation-duration: 1s;
