--- a/resources/sass/components/_solutions.scss
+++ b/resources/sass/components/_solutions.scss
@@ -67,19 +67,19 @@
 
                 &.has-count {
                     transform-origin: 50% 50%;
-                    animation: outer-beat1 .8s ease-out .6s;
+                    animation: outer-beat1 .8s ease-out;
                     animation-fill-mode: forwards;
 
                     #outer-circle {
                         transform-origin: 50% 50%;
-                        animation: outer-beat1 .8s ease-out .6s;
+                        animation: outer-beat1 .8s ease-out;
                         animation-fill-mode: forwards;
                     }
 
                     // The inner heart
                     #wishlist {
                         transform-origin: 50% 50%;
-                        animation: center-beat .3s ease-out .5s;
+                        animation: center-beat .3s ease-out;
                         animation-fill-mode: forwards;
                     }
                     //max-width: initial;
