How to use page

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -31,6 +31,9 @@
 @import 'pages/resultsPage';
 @import 'pages/content';
 
+// PAGE SECTION
+@import 'pages/pagesections/howSection';
+
 // TEMPLATE FILES
 @import 'layout/header';
 @import 'layout/footer';
