Alignment of details div in shortlist

--- a/resources/sass/components/_solutions.scss
+++ b/resources/sass/components/_solutions.scss
@@ -145,11 +145,11 @@
             }
 
             .details {
-                height: 180px;
+                height: 130px;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                justify-content: center;
+                justify-content: flex-end;
             }
         }
 
