Dashes and ticks now working in shortlist

--- a/resources/sass/components/_solutions.scss
+++ b/resources/sass/components/_solutions.scss
@@ -119,6 +119,7 @@
         //display: block !important;
 
         #compare_hospitals_grid {
+            padding-bottom: 30px;
 
             .image-wrapper {
                 position: relative;
