Tweaking some animations. Install animate.css

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,6 +8,9 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+// Animate CSS library
+@import '~animate.css';
+
 // Bootstrap select picker
 @import '~bootstrap-select/sass/bootstrap-select';
 
