- Added FAQs Page

--- a/resources/sass/pages/_content.scss
+++ b/resources/sass/pages/_content.scss
@@ -1,6 +1,7 @@
 .cookie-page,
 .privacy-page,
 .terms-and-conditions-page,
+.faqs-page,
 .your-rights-page {
     main {
         padding-top: 40px;
