--- a/resources/sass/_animations.scss
+++ b/resources/sass/_animations.scss
@@ -12,6 +12,10 @@
 }
 
 @keyframes drawsvg {
+    from {
+        stroke-dashoffset: 10000;
+
+    }
     to {
         stroke-dashoffset: 1000;
     }
@@ -22,18 +26,19 @@
         transform: scale(1);
     }
     48% {
-        transform: scale(1.17,1.08);
+        transform: scale(1.17, 1.08);
     }
     100% {
         transform: scale(1);
     }
 }
+
 @keyframes outer-beat1 {
     0% {
         transform: scale(.9);
     }
     48% {
-        transform: scale(1.08,1.03);
+        transform: scale(1.08, 1.03);
     }
     100% {
         transform: scale(1);
