--- a/resources/sass/components/_solutions.scss
+++ b/resources/sass/components/_solutions.scss
@@ -215,10 +215,13 @@
 
 .special-offer-tab {
     color: $white;
-    background-image: linear-gradient(264deg, #1b71f3 0%, #8f00ff 0%, #a346ec 52%, #b687db 100%);
     width: 340px;
 
-    &.pink {
+    &.nhs-hospital__offer {
+        background-image: linear-gradient(264deg, #1b71f3 0%, #8f00ff 0%, #a346ec 52%, #b687db 100%);
+    }
+
+    &.private-hospital__offer {
         background-image: linear-gradient(249deg, #1b71f3 0%, #ed0373 0%, #cc6d9b 100%);
     }
 
@@ -297,6 +300,10 @@
 .special-offer-body {
     padding: 0 25px 25px 80px;
     display: none;
+
+    .offer-price {
+        min-height: 30px;
+}
 }
 
 // Compare items
