--- a/resources/sass/components/basic/_specialOfferSlide.scss
+++ b/resources/sass/components/basic/_specialOfferSlide.scss
@@ -8,14 +8,16 @@
     color: $white;
     background-image: linear-gradient(252deg, #d57ca6 0%, #ed0373 100%);
     padding: 22px;
-    transform: translate3d(-50%, 0, 0);
+    transform: rotate3d(0, 1, 0, 90deg);
     transition: $transition;
+    transform-origin: left;
     opacity: 0;
     pointer-events: none;
     border-radius: 0 10px 10px 10px;
 
     &.show {
-        transform: translate3d(0, 0, 0);
+        transform: rotate3d(0, 1, 0, 0deg);
+        //transform: translate3d(0, 0, 0);
         opacity: 1;
         z-index: 5;
         pointer-events: initial;
